# scripts

./: .gitignore  LICENSE  README.md
clk/: clk  clk-test  clk-test-edit.bash  clk-test-misc.bash  clk-test-mutation.bash  clk-test-pause.bash  clk-test-session.bash  clk-test-unit.bash  clk-test-view.bash  clk.1
clock/: clock  clock.1
mew/: README.md  dev  mew.1  pyproject.toml  test  test_cli.py  test_preprocess.py  test_speak.py
mew/mew/: __main__.py  cli.py  config.py  preprocess.py  speak.py
mewsify/: mewsify.1  pyproject.toml  test_preprocess.py
mewsify/mewsify/: cli.py  config.py  preprocess.py  speak.py
nt/: nt  nt-test  nt-test-activity.bash  nt-test-hierarchical.bash  nt-test-last.bash  nt-test-misc.bash  nt-test-new.bash  nt-test-open.bash  nt-test-reindex.bash  nt-test-rename.bash  nt-test-renumber.bash  nt.1
qlaude/: qlaude  qlaude.1
tanghulu/: tanghulu  tanghulu.1
tanghulu/completions/: _tanghulu  tanghulu.bash
